--- a/JSAdvanced/04-DOM-Lab/01. Articles List/template.html
+++ b/JSAdvanced/04-DOM-Lab/01. Articles List/template.html
@@ -11,7 +11,7 @@
 <h4>Create a functionality which creates articles and appends them into some article section.</h4>
 <div id="createArticle">
     <label for="createTitle">Title</label>
-    <input id="createTitle"/><br>
+    <input id="createTitle" value="sadasf"/><br>
     <label for="createContent">Content</label>
     <textarea id="createContent"></textarea>
     <button onclick="createArticle()">Create</button>
